--- a/package.json
+++ b/package.json
@@ -19,11 +19,21 @@
   },
   "homepage": "https://github.com/Mairajk/JWT-with-React-and-Express#readme",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.1",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "axios": "^1.2.1",
     "bcrypt-inzi": "^1.0.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "formik": "^2.2.9",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.1"
+    "mongoose": "^6.8.1",
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   }
 }
